--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -1,30 +1,22 @@
-/**
- * Any CSS included here will be global. The classic template
- * bundles Infima by default. Infima is a CSS framework designed to
- * work well for content-centric websites.
- */
-
-/* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+    --ifm-color-primary: #971f15;
+    --ifm-color-primary-dark: #8a1c13;
+    --ifm-color-primary-darker: #7e190f;
+    --ifm-color-primary-darkest: #6e160d;
+    --ifm-color-primary-light: #a0261a;
+    --ifm-color-primary-lighter: #ab2a1e;
+    --ifm-color-primary-lightest: #bd3629;
+    --ifm-code-font-size: 95%;
+    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
-/* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+[data-theme="dark"] {
+    --ifm-color-primary: #a94538;
+    --ifm-color-primary-dark: #9d4032;
+    --ifm-color-primary-darker: #8f3a2a;
+    --ifm-color-primary-darkest: #7a3222;
+    --ifm-color-primary-light: #c15347;
+    --ifm-color-primary-lighter: #cc5a4d;
+    --ifm-color-primary-lightest: #e06b60;
+    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
